[package]
name = "bio"
version = "0.1.0"
authors = ["Christian De la Hoz <christian.hoz@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"

[dev-dependencies]
test-case = "1.0.0"
prettytable-rs = "0.8.0"
